[gd_scene load_steps=5 format=3 uid="uid://c06bpkbuxqqhi"]

[ext_resource type="Script" path="res://Pause_Menu.gd" id="1_28xb8"]
[ext_resource type="Texture2D" uid="uid://8tk7f1fi7snd" path="res://Assets_aula1/Assets_aula1/botoes/64px/Close_64.png" id="2_kvh1o"]
[ext_resource type="Texture2D" uid="uid://c4p0sgvwpftl8" path="res://Assets_aula1/Assets_aula1/botoes/64px/Restart_64.png" id="3_ohia3"]
[ext_resource type="Texture2D" uid="uid://b4l4v2xmwjdtk" path="res://Assets_aula1/Assets_aula1/botoes/64px/Back_64.png" id="4_1t3mb"]

[node name="Pause_Menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_28xb8")

[node name="Pause_Menu2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Menu" type="VBoxContainer" parent="Pause_Menu2"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -50.5
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="quit_bt" type="Button" parent="Pause_Menu2/Menu"]
layout_mode = 2
text = "Sair do jogo"
icon = ExtResource("2_kvh1o")

[node name="reiniciar_bt" type="Button" parent="Pause_Menu2/Menu"]
layout_mode = 2
text = "Reiniciar "
icon = ExtResource("3_ohia3")

[node name="voltar_bt" type="Button" parent="Pause_Menu2/Menu"]
layout_mode = 2
text = "Voltar"
icon = ExtResource("4_1t3mb")

[connection signal="pressed" from="Pause_Menu2/Menu/quit_bt" to="." method="_on_quit_bt_pressed"]
[connection signal="pressed" from="Pause_Menu2/Menu/reiniciar_bt" to="." method="_on_reiniciar_bt_pressed"]
[connection signal="pressed" from="Pause_Menu2/Menu/voltar_bt" to="." method="_on_voltar_bt_pressed"]
